2004-03-19  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/page-layout.scm (ly:optimal-page-breaks): Bugfix: underful
	solutions are now optimal too.

	* input/test/page-breaks.ly: New file.

	* lily/paper-outputter.cc (Paper_outputter): Import page breaking
	functions into safe module.

	* lily/lily-guile.cc (ly:number->string): Do not leave space at
	end, prepend zeros.

	* scm/output-*.scm: Use ly:number->string rather than
	number->string.  Makes for saner output.

	* scm/output-ps.scm (define-fonts): Always scale by designsize.
	Fixes feta-nummer, feta-din scaling.

2004-03-19  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* input/mutopia/W.A.Mozart/mozart-hrn-3.ly: use latin1.

	* scm/music-functions.scm (descend-to-context): new
	function. Similar to context-spec-music.
	(make-time-signature-set): specify Score as descend-only. This
	fixes the polymetric.ly example.

	* lily/context-specced-music-iterator.cc (construct_children): add
	support for descend-only context spec.

	* lily/note-head.cc (brew_ez_stencil): read vector note-names to
	determine ez-notation letter. 

	* lily/system.cc (get_line): start with dumping layer 3. This
	fixes ez notation.

2004-03-19  Jan Nieuwenhuizen  <janneke@gnu.org>

	* input/test/title-markup.ly: Stress breaking harder.

	* scm/page-layout.scm (height-score): Overfull page scores twice
	as bad as underfull (was: by a power).
	(walk-lines): Omit first walk-path round (breaking after new node,
	without lines).

	* lily/paper-book.cc (pages): Bugfix: copy_height and tag_height
	diff values are negative.
	(output): Bugfix: treat negative vfill differently.

	* Documentation/user/lilypond.tely (direntry): Add note about why
	`info lilypond' brings up `Invoking LilyPond' node.

2004-03-18  Jan Nieuwenhuizen  <janneke@gnu.org>

	* input/mutopia/W.A.Mozart/mozart-hrn-3.ly: Mutopia tagline.

	* lily/paper-book.cc: Remove cruft.
	(output): Bugfix: put vfill between lines.
	(pages): Bugfix: set page vars needed for filling.
