@@ -1,5 +1,7 @@
 2004-03-19  Jan Nieuwenhuizen  <janneke@gnu.org>
 
+	* scm/output-ps.scm (polygon): Fix: add spaces.
+
 	* scm/page-layout.scm (ly:optimal-page-breaks): Bugfix: underful
 	solutions are now optimal too.
 
